<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Twittrouter</string>
    <string name="menu_exit">Exit</string>
    <string name="status_download_failed">failed to download</string>
    <string name="upgrade_via_browser_hint">Open browser and download the update manually</string>
    <string name="status_downloaded">Downloaded</string>
    <string name="new_version_alert_yes">Yes</string>
    <string name="status_downloading">Downloading</string>
    <string name="new_version_alert_no">No</string>
    <string name="fqrouter_not_install_alert_title">fqrouter is not installed</string>
    <string name="fqrouter_not_install_alert_message">Do you want to install now?</string>
    <string name="fqrouter_not_run_alert_title">fqrouter is not running</string>
    <string name="fqrouter_not_run_alert_message">Do you want to run fqrouter now?</string>
    <string name="menu_about">About</string>
    <string name="menu_start">Start</string>
    <string name="run_condition">Run condition</string>
    <string name="run_condition_1">1.Device is rooted</string>
    <string name="run_condition_2">2.fqrouter is running</string>
    <string name="run_condition_3">3.Start Wi-Fi hotspot</string>
    <string name="fqrouter_not_install_or_root_alert_message">Device not rooted,so you can not use this App.But fqrouter can help you cross GFW.Do you want to install now?</string>
    <string name="about_page">file:///android_asset/pages/about-en.html</string>
    <string name="about_info_title">Twittrouter %s</string>
    <string name="about_info_share">Share</string>
    <string name="share_subject">Invite your friends to twitter</string>
    <string name="share_content">
        Start Wi-Fi hotspot on you android device,you can invite other people who connect your Wi-FI to twitter.Please try this App twittrouter http://crater.herokuapp.com/uploads/twittrouter.apk
    </string>
    <string name="share_channel">How do you want to share?</string>
    <string name="about_info_close">Close</string>
    <string name="device_not_root">Your device is not rooted,but this app need root promission</string>
    <string name="wait_downloading_fqrouter">Downloading fqrouter,please wait for downloading finish</string>
    <string name="status_exiting">Exiting...</string>
    <string name="server_died_or_not_running">Server isnot running or died,please wait or restart</string>
    
</resources>